--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "dynart/micro",
-    "description": "A micro PHP framework.",
+    "description": "Micro PHP framework.",
     "type": "library",
-    "version": "0.5.0",
+    "version": "0.6.0",
     "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
