--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0"
+        "php": ">=7.1.0",
+        "phpmailer/phpmailer": "^6.8.0"
     },
     "minimum-stability": "stable"
 }
