--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "phpmailer/phpmailer": "^6.8.0"
+        "phpmailer/phpmailer": "^6.8.0",
+        "katzgrau/klogger": "dev-master"
     },
     "minimum-stability": "stable"
 }
