--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
         "phpmailer/phpmailer": "^6.8.0",
         "katzgrau/klogger": "dev-master"
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
