Add ext-ctype and make int from only digit strings in Config::getArray

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "katzgrau/klogger": "dev-master"
+        "katzgrau/klogger": "dev-master",
+        "ext-ctype": "*"
     },
     "minimum-stability": "dev"
 }
